--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -50,8 +50,7 @@
               </div>
 
               <div class="col-10">
-                <label for="complemento" class="form-label">Complemento <span
-                    class="text-muted">(Opcional)</span></label>
+                <label for="complemento" class="form-label">Complemento <span class="text-muted">(Opcional)</span></label>
                 <input type="text" class="form-control" id="complemento" placeholder="">
               </div>
 
@@ -125,13 +124,13 @@
 
             <hr class="my-4">
 
-            <button class="w-100 btn btn-primary btn-lg" type="button" (click)="validate()">Salvar</button>
+            <button class="w-100 btn btn-primary btn-lg" type="button" (click)="salvarForm()">Salvar</button>
           </form>
         </div>
       </div>
 
     <footer class="my-5 text-muted text-center text-small">
-      <p class="mb-1">&copy; 2022 Bemol Digital</p>
+      <p class="mb-1">&copy; 2022 Bemol Digital by Hudson Horta - hudsonhorta@gmail.com</p>
     </footer>
   </div>
 
